// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<footer
  className="pf-c-wizard__footer foo-class"
>
  <SubmitButton
    handleSubmit={[MockFunction]}
    submitLabel="Submit"
  />
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Component>
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="link"
  >
    Cancel
  </Component>
</footer>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<footer
  className="pf-c-wizard__footer "
>
  <SubmitButton
    handleSubmit={[MockFunction]}
    submitLabel="Submit"
  />
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Component>
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="link"
  >
    Cancel
  </Component>
</footer>
`;
